Refactor world protection features and configuration handling